fix clipped search facet in sidebar (bug 751877)

--- a/media/css/mkt/search.less
+++ b/media/css/mkt/search.less
@@ -362,7 +362,6 @@
                 }
             }
             > ul {
-                max-height: 250px;
                 > li.selected:first-child a {
                     color: @link;
                 }
